# eds-backend-telepathy

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.old  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am
debian/: changelog  control  evolution-data-server-addressbook-backend-telepathy.install  evolution-data-server-addressbook-backend-telepathy.preinst  rules
src/: Makefile.am  e-book-backend-tp-cl.c  e-book-backend-tp-cl.h  e-book-backend-tp-contact.c  e-book-backend-tp-contact.h  e-book-backend-tp-db.c  e-book-backend-tp-db.h  e-book-backend-tp-factory.c  e-book-backend-tp-log.c  e-book-backend-tp-log.h  e-book-backend-tp-types.c  e-book-backend-tp-types.h  e-book-backend-tp.c  e-book-backend-tp.h  test-tpcl.c
test/: .project.vim  Makefile.am  add-contacts-pinocchio.sh  add-contacts.c  change-aliases-pinocchio.sh  change-aliases.c  remove-contacts-pinocchio.sh  remove-contacts.c  test-utils.c  test-utils.h
